feat(ext_auth): fixed check flags field type
