# src/identity_auth_server/k8s/view_models.py
@@ -1,7 +1,7 @@
 from typing import List, Optional
 from uuid import UUID
 
-from pydantic import BaseModel, ConfigDict
+from pydantic import BaseModel, ConfigDict, field_validator
 
 from identity_auth_server.core.types import AppType, ToolCheckFlags
 
@@ -46,10 +46,22 @@ class K8sMultiAgentSystemCRDViewModel(BaseModel):
     namespace: str
     mas_metadata: Optional[K8sMultiAgentSystemMetadataViewModel] = None
     name: str
-    enabled_tool_checks: Optional[ToolCheckFlags]
+    enabled_tool_checks: Optional[List[str]]
     llm_host: Optional[str]
     app_specs: List[K8sAppSpecViewModel] = []
     mas_id: Optional[UUID] = None
+
+    @field_validator("enabled_tool_checks", mode="before")
+    @classmethod
+    def convert_enabled_tool_checks(cls, v):
+        checks = []
+        if (v & ToolCheckFlags.DETERMINISTIC_TOOL_SELECTED) == ToolCheckFlags.DETERMINISTIC_TOOL_SELECTED:
+            checks.append(ToolCheckFlags.DETERMINISTIC_TOOL_SELECTED.name)
+        if (v & ToolCheckFlags.DETERMINISTIC_LLM_SELECTED_TOOLS) == ToolCheckFlags.DETERMINISTIC_LLM_SELECTED_TOOLS:
+            checks.append(ToolCheckFlags.DETERMINISTIC_LLM_SELECTED_TOOLS.name)
+        if (v & ToolCheckFlags.AI_POWERED_TOOL_MATCH) == ToolCheckFlags.AI_POWERED_TOOL_MATCH:
+            checks.append(ToolCheckFlags.AI_POWERED_TOOL_MATCH.name)
+        return checks
 
     # To be able to create an instance from a SQLModel
     model_config = ConfigDict(from_attributes=True)
